...
        <tr>
          <td className="pr-2">File Path:</td>
          <td className="max-w-[150px]">{file.path}</td>
        </tr>
        <tr>
          <td className="pr-2">Remote Key:</td>
          <td className="truncate max-w-[150px]">{file.remoteKey || 'null'}</td>
        </tr>
        <tr>
          <td className="pr-2">Content Hash:</td>
          <td className="truncate max-w-[150px]">{file.contentHash}</td>
        </tr>
        <tr>
...
